# COURSE-PROJECT

./: .env_template  .gitignore  README.md  pyproject.toml
src/: read_excel.py  reports.py  services.py  utils.py  views.py
tests/: test_read_excel.py  test_reports.py  test_services.py  test_utils.py  test_views.py
